--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
+  get_x: ^5.0.0
+  responsive_framework: ^1.5.1
+  sizer: ^3.1.3
 
 dev_dependencies:
   flutter_test:
