--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
-  get_x: ^5.0.0
   responsive_framework: ^1.5.1
   sizer: ^3.1.3
+  supabase_flutter: ^2.12.0
+  get: ^4.7.3
+  dropdown_search: ^6.0.2
+  flutter_typeahead: ^5.2.0
+
 
 dev_dependencies:
   flutter_test:
